Plugin Name	: Popunder Popup
Plugin URI	: http://www.gopiplus.com/work/2014/05/13/popunder-popup-wordpress-plugin/
Author		: Gopi Ramasamy
Author URI	: http://www.gopiplus.com
License		: GPLv2 or later
License URI	: http://www.gnu.org/licenses/gpl-2.0.html
 
********************************Version 1.0************************************************************

First version.

*   Easy to configure
*   Lightweight JQuery
*   Unblockable popup
*   Once per browser session
*   Option to display random URL
*   Supports localization